--- a/app/src/main/res/layout/item_list_fragment_folder.xml
+++ b/app/src/main/res/layout/item_list_fragment_folder.xml
@@ -1,84 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <com.chauthai.swipereveallayout.SwipeRevealLayout
-            android:id="@+id/swipeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:dragEdge="right"
-            app:mode="same_level">
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="@dimen/_60sdp"
+            android:layout_height="@dimen/_60sdp"
+            android:layout_margin="@dimen/_4sdp"
+            app:cardCornerRadius="@dimen/_8sdp"
+            app:cardElevation="@dimen/_4sdp">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/edit_icon_folder"
-                    android:layout_width="@dimen/_32sdp"
-                    android:layout_height="match_parent"
-                    android:clickable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:scaleType="center"
-                    android:src="@drawable/icon_edit"
-                    app:tint="?attr/colorControlNormal" />
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/delete_icon_folder"
-                    android:layout_width="@dimen/_32sdp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:clickable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:scaleType="center"
-                    android:src="@drawable/icon_delete"
-                    app:tint="?attr/colorControlNormal" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <FrameLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_marginHorizontal="@dimen/_2sdp"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:maxLines="4"
+                android:textSize="@dimen/_10sdp"
+                tools:text="comde" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+        </com.google.android.material.card.MaterialCardView>
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        app:srcCompat="@drawable/icon_folder" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/list_folder_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginVertical="@dimen/_6sdp"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:includeFontPadding="false"
-                        android:textSize="@dimen/_16sdp"
-                        tools:text="NIKE" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:layout_marginEnd="@dimen/_8sdp"
-                    app:srcCompat="@drawable/icon_drag_handle"
-                    app:tint="?attr/colorControlNormal" />
-            </FrameLayout>
-
-        </com.chauthai.swipereveallayout.SwipeRevealLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:includeFontPadding="false"
+            android:textSize="@dimen/_8sdp"
+            tools:text="2 items" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
