--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,21 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingHorizontal="@dimen/_4sdp"
         tools:context=".ui.main.listfragment.ListFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_recyclerView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/colorPrimary"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="10"
-            tools:listitem="@layout/item_list_fragment" />
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                tools:listitem="@layout/item_list_fragment_folder" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="@dimen/_16sdp"
+                android:layout_marginVertical="@dimen/_12sdp"
+                android:background="@color/gainsboro_gray" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_list_fragment" />
+        </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_folder"
@@ -25,12 +45,13 @@
             android:layout_marginEnd="@dimen/_56sdp"
             android:layout_marginBottom="@dimen/_48sdp"
             android:contentDescription="@string/add_folder"
-            android:visibility="invisible"
             android:src="@drawable/icon_folder_add"
-            app:backgroundTint="?attr/colorControlNormal"
+            android:visibility="invisible"
+            app:backgroundTint="?fabChildBackgroundColor"
+            app:elevation="@dimen/_2sdp"
             app:fabCustomSize="@dimen/_32sdp"
-            app:rippleColor="?attr/colorPrimary"
-            app:tint="?attr/colorPrimary" />
+            app:rippleColor="@android:color/transparent"
+            app:tint="?fabChildTintColor" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_add"
@@ -42,10 +63,11 @@
             android:contentDescription="@string/add_content"
             android:src="@drawable/icon_add"
             android:visibility="invisible"
-            app:backgroundTint="?attr/colorControlNormal"
+            app:backgroundTint="?fabChildBackgroundColor"
+            app:elevation="@dimen/_2sdp"
             app:fabCustomSize="@dimen/_32sdp"
-            app:rippleColor="?attr/colorPrimary"
-            app:tint="?attr/colorPrimary" />
+            app:rippleColor="@android:color/transparent"
+            app:tint="?fabChildTintColor" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_main"
@@ -55,10 +77,10 @@
             android:layout_margin="@dimen/_16sdp"
             android:contentDescription="@string/add"
             android:src="@drawable/icon_add"
-            app:backgroundTint="?attr/colorSurface"
+            app:backgroundTint="?attr/fabColor"
+            app:elevation="@dimen/_3sdp"
             app:fabCustomSize="@dimen/_44sdp"
-            app:rippleColor="@color/gainsboro_gray"
-            app:tint="?attr/colorPrimaryVariant">
+            app:rippleColor="@android:color/transparent">
 
         </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
