--- a/app/src/main/res/layout/item_list_fragment.xml
+++ b/app/src/main/res/layout/item_list_fragment.xml
@@ -8,8 +8,7 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
+        android:layout_marginHorizontal="@dimen/_4sdp"
         android:layout_marginBottom="4dp"
         app:cardElevation="@dimen/_4sdp">
 
