--- a/app/src/main/res/layout/item_main_fragment_child.xml
+++ b/app/src/main/res/layout/item_main_fragment_child.xml
@@ -6,105 +6,88 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:dragEdge="right"
-    app:mode="same_level">
+    app:mode="normal">
 
-    <FrameLayout
-        android:layout_width="@dimen/_64sdp"
-        android:layout_height="wrap_content">
 
-        <View
-            android:id="@+id/divider_top1"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_gravity="top"
-            android:background="@color/dark_gray2"
-            android:visibility="gone" />
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?android:colorBackground"
+        android:orientation="horizontal">
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/_4sdp"
+            android:layout_marginVertical="@dimen/_3sdp"
             android:includeFontPadding="false"
             android:paddingVertical="@dimen/_2sdp"
             android:text=""
-            android:textSize="@dimen/_16sdp" />
+            android:textSize="@dimen/_15sdp" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <FrameLayout
             android:id="@+id/edit_icon"
-            android:layout_width="@dimen/_32sdp"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            android:scaleType="center"
-            android:src="@drawable/icon_edit"
-            app:tint="?attr/colorControlNormal" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:layout_marginHorizontal="@dimen/_6sdp"
+                android:alpha="0.8"
+                android:scaleType="center"
+                android:scaleX="0.9"
+                android:scaleY="0.9"
+                android:src="@drawable/icon_edit" />
+        </FrameLayout>
+
+        <FrameLayout
             android:id="@+id/delete_icon"
-            android:layout_width="@dimen/_32sdp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            android:scaleType="center"
-            android:src="@drawable/icon_delete"
-            app:tint="?attr/colorControlNormal" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_gravity="bottom"
-            android:background="@color/dark_gray2" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/_8sdp"
+                android:alpha="0.8"
+                android:scaleType="center"
+                android:scaleX="0.9"
+                android:scaleY="0.9"
+                android:src="@drawable/icon_delete" />
+        </FrameLayout>
 
-    </FrameLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <FrameLayout
         android:id="@+id/item_child_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <View
-            android:id="@+id/divider_top2"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_gravity="top"
-            android:background="@color/dark_gray2"
-            android:visibility="gone" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginStart="@dimen/_6sdp"
-            android:scaleX="0.3"
-            android:scaleY="0.3"
-            android:src="@drawable/icon_dot" />
+        android:layout_height="wrap_content"
+        android:background="?childCategoryBackground">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/child_text"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/_4sdp"
-            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginVertical="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:alpha="0.8"
+            android:ellipsize="end"
             android:includeFontPadding="false"
+            android:maxLines="1"
             android:paddingVertical="@dimen/_2sdp"
-            android:textSize="@dimen/_16sdp"
+            android:textSize="@dimen/_15sdp"
             tools:text="Short Sleeve" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/drag_handle"
+            android:id="@+id/child_category_drag_handle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="@dimen/_8sdp"
+            android:alpha="0.8"
             app:srcCompat="@drawable/icon_drag_handle" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_gravity="bottom"
-            android:background="@color/dark_gray2" />
     </FrameLayout>
+
 </com.chauthai.swipereveallayout.SwipeRevealLayout>
