--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,12 +16,13 @@
         <item name="colorOnError">@color/white</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
         <!--        Font-->
         <item name="fontFamily">@font/font_ibm_plex_sans</item>
         <!--        Phone Navigation Bar Color-->
-        <item name="android:navigationBarColor">@color/gainsboro_gray</item>
+        <item name="android:navigationBarColor">@color/white</item>
         <!--        Menu Text Color-->
         <item name="android:textColorSecondary">@android:color/black</item>
         <!--        Menu Text Style-->
@@ -34,8 +35,13 @@
         <item name="snackbarButtonStyle">@style/mySnackBarButton</item>
         <!--        Snack Bar Style-->
         <item name="snackbarStyle">@style/mySnackBar</item>
-
-
+        <!--        Child Category Text color-->
+        <!--        <item name="childCategoryText">@color/childCategory_text_color</item>-->
+        <item name="childCategoryBackground">@color/childCategory_background</item>
+        <item name="childCategoryDragBackground">@color/childCategory_drag_background</item>
+        <item name="fabColor">@color/fabColor</item>
+        <item name="fabChildTintColor">@color/fabChild_tint_color</item>
+        <item name="fabChildBackgroundColor">@color/fabChild_background_color</item>
     </style>
     <!--    Tool Bar Title Style-->
     <!--    In Activity_main.xml-->
@@ -76,19 +82,25 @@
     </style>
     <!--    Snack Bar Text Style-->
     <style name="mySnackBarText" parent="Widget.MaterialComponents.Snackbar.TextView">
-        <item name="android:textSize">@dimen/_11sdp</item>
+        <item name="android:textSize">@dimen/_9sdp</item>
         <item name="android:textColor">@color/white</item>
     </style>
     <!--    Snack Bar Action Style-->
     <style name="mySnackBarButton" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textSize">@dimen/_10sdp</item>
+        <item name="android:textSize">@dimen/_9sdp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#FF00FFFF</item>
+        <item name="android:textColor">#FF00CCCC</item>
     </style>
     <!--    Snack Bar Style-->
     <style name="mySnackBar" parent="Widget.MaterialComponents.Snackbar">
         <item name="backgroundTint">@color/dark_gray</item>
         <item name="android:paddingHorizontal">@dimen/_8sdp</item>
-        <item name="actionTextColorAlpha">0.9</item>
+        <item name="actionTextColorAlpha">1</item>
     </style>
+
+    <attr name="childCategoryBackground" format="color" />
+    <attr name="childCategoryDragBackground" format="color" />
+    <attr name="fabColor" format="color" />
+    <attr name="fabChildTintColor" format="color" />
+    <attr name="fabChildBackgroundColor" format="color" />
 </resources>
