--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -15,27 +15,42 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_folder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                tools:itemCount="5"
+                android:scrollbars="horizontal"
+                android:scrollbarAlwaysDrawHorizontalTrack="false"
                 tools:listitem="@layout/item_list_fragment_folder" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginHorizontal="@dimen/_16sdp"
-                android:layout_marginVertical="@dimen/_12sdp"
-                android:background="@color/gainsboro_gray" />
-
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_recyclerView"
+                android:id="@+id/recyclerView_content"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_8sdp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_list_fragment" />
         </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_18sdp"
+            android:layout_marginBottom="@dimen/_92sdp"
+            android:contentDescription="@string/fab"
+            android:src="@drawable/icon_add"
+            app:backgroundTint="?attr/fabColor"
+            app:elevation="@dimen/_4sdp"
+            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
+            app:fabSize="normal"
+            app:tint="?fabTint"
+            app:rippleColor="@android:color/transparent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_folder"
@@ -43,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="@dimen/_56sdp"
-            android:layout_marginBottom="@dimen/_48sdp"
+            android:layout_marginBottom="@dimen/_124sdp"
             android:contentDescription="@string/add_folder"
             android:src="@drawable/icon_folder_add"
             android:visibility="invisible"
@@ -59,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="@dimen/_22sdp"
-            android:layout_marginBottom="@dimen/_64sdp"
+            android:layout_marginBottom="@dimen/_140sdp"
             android:contentDescription="@string/add_content"
             android:src="@drawable/icon_add"
             android:visibility="invisible"
@@ -68,21 +83,6 @@
             app:fabCustomSize="@dimen/_32sdp"
             app:rippleColor="@android:color/transparent"
             app:tint="?fabChildTintColor" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/_16sdp"
-            android:contentDescription="@string/add"
-            android:src="@drawable/icon_add"
-            app:backgroundTint="?attr/fabColor"
-            app:elevation="@dimen/_3sdp"
-            app:fabCustomSize="@dimen/_44sdp"
-            app:rippleColor="@android:color/transparent">
-
-        </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
