--- a/app/src/main/res/layout/title_list.xml
+++ b/app/src/main/res/layout/title_list.xml
@@ -4,7 +4,7 @@
     <data>
 
         <variable
-            name="childCategory"
+            name="category"
             type="String" />
     </data>
 
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:text="@{childCategory}"
+            android:text="@{category}"
             android:textSize="@dimen/_18sdp"
             android:textStyle="bold" />
 
