--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -16,13 +16,12 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_folder"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:itemCount="5"
-                android:scrollbars="horizontal"
-                android:scrollbarAlwaysDrawHorizontalTrack="false"
                 tools:listitem="@layout/item_list_fragment_folder" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -30,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/_8sdp"
+                android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_list_fragment" />
         </LinearLayout>
@@ -38,18 +38,14 @@
             android:id="@+id/fab_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:layout_marginEnd="@dimen/_18sdp"
-            android:layout_marginBottom="@dimen/_92sdp"
-            android:contentDescription="@string/fab"
+            android:layout_margin="@dimen/_16sdp"
+            android:contentDescription="@string/floating_action_button"
             android:src="@drawable/icon_add"
-            app:backgroundTint="?attr/fabColor"
             app:elevation="@dimen/_4sdp"
-            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
             app:fabSize="normal"
-            app:tint="?fabTint"
+            app:layout_anchor="@id/recyclerView_content"
+            app:layout_anchorGravity="bottom|end"
+            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
             app:rippleColor="@android:color/transparent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -57,32 +53,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_marginEnd="@dimen/_56sdp"
-            android:layout_marginBottom="@dimen/_124sdp"
+            android:layout_marginEnd="@dimen/_50sdp"
+            android:layout_marginBottom="@dimen/_46sdp"
             android:contentDescription="@string/add_folder"
             android:src="@drawable/icon_folder_add"
             android:visibility="invisible"
-            app:backgroundTint="?fabChildBackgroundColor"
             app:elevation="@dimen/_2sdp"
-            app:fabCustomSize="@dimen/_32sdp"
-            app:rippleColor="@android:color/transparent"
-            app:tint="?fabChildTintColor" />
+            app:fabSize="mini"
+            app:layout_anchor="@id/recyclerView_content"
+            app:layout_anchorGravity="bottom|end"
+            app:rippleColor="@android:color/transparent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_marginEnd="@dimen/_22sdp"
-            android:layout_marginBottom="@dimen/_140sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_60sdp"
             android:contentDescription="@string/add_content"
             android:src="@drawable/icon_add"
             android:visibility="invisible"
-            app:backgroundTint="?fabChildBackgroundColor"
             app:elevation="@dimen/_2sdp"
-            app:fabCustomSize="@dimen/_32sdp"
-            app:rippleColor="@android:color/transparent"
-            app:tint="?fabChildTintColor" />
+            app:fabSize="mini"
+            app:layout_anchor="@id/recyclerView_content"
+            app:layout_anchorGravity="bottom|end"
+            app:rippleColor="@android:color/transparent" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
