--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -22,14 +22,16 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editText_layout_dialog"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_12sdp"
             android:hint="@{hint}"
             android:theme="@style/myEditText"
             app:counterEnabled="true"
-            app:counterMaxLength="15"
+            app:counterMaxLength="20"
             app:endIconMode="clear_text"
             app:placeholderText="@{placeHolder}">
 
@@ -39,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:maxLength="15"
+                android:maxLength="20"
                 android:text="@{setText}" />
         </com.google.android.material.textfield.TextInputLayout>
     </FrameLayout>
