--- a/app/src/main/res/layout/item_list_fragment_folder.xml
+++ b/app/src/main/res/layout/item_list_fragment_folder.xml
@@ -10,52 +10,105 @@
             type="com.example.project_myfit.ui.main.listfragment.database.ListFolder" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <com.chauthai.swipereveallayout.SwipeRevealLayout
+        android:id="@+id/list_swipeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:dragEdge="top"
+        app:mode="normal">
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_64sdp"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_64sdp"
-            android:layout_margin="@dimen/_4sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardElevation="@dimen/_4sdp">
+            android:background="?android:colorBackground">
 
-            <TextView
-                android:layout_width="match_parent"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/edit_folder"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="bottom"
-                android:layout_marginHorizontal="@dimen/_2sdp"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:maxLines="4"
-                android:text="@{listFolder.folderName}"
-                android:textSize="@dimen/_10sdp"
-                tools:text="comme \n des garcons" />
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?selectableItemBackground"
+                android:scaleType="center"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                app:srcCompat="@drawable/icon_edit" />
 
-        </com.google.android.material.card.MaterialCardView>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/delete_folder"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center|top"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:foreground="?selectableItemBackground"
+                android:scaleType="center"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                app:srcCompat="@drawable/icon_delete" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardView"
+                android:clickable="true"
+                android:layout_width="@dimen/_64sdp"
+                android:layout_height="@dimen/_64sdp"
+                android:layout_margin="@dimen/_4sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardElevation="@dimen/_4sdp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/drag_handle_folder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|end"
+                    android:scaleX="0.7"
+                    android:scaleY="0.7"
+                    app:srcCompat="@drawable/icon_drag_handle" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:layout_marginHorizontal="@dimen/_2sdp"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:maxLines="3"
+                    android:text="@{listFolder.folderName}"
+                    android:textSize="@dimen/_10sdp"
+                    tools:text="comme \n des garcons" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="@{Integer.toString(listFolder.itemCount)}"
-                android:textSize="@dimen/_8sdp"
-                tools:text="2" />
+                android:layout_gravity="center_horizontal"
+                android:background="?android:colorBackground"
+                android:orientation="horizontal">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text=" items"
-                android:textSize="@dimen/_8sdp" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:text="@{Integer.toString(listFolder.itemCount)}"
+                    android:textSize="@dimen/_8sdp"
+                    tools:text="2" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:includeFontPadding="false"
+                    android:text="@string/items"
+                    android:textSize="@dimen/_8sdp" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </com.chauthai.swipereveallayout.SwipeRevealLayout>
 </layout>
