--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,10 +19,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
-        <!--        Font-->
-        <item name="fontFamily">@font/font_ibm_plex_sans</item>
         <!--        Phone Navigation Bar Color-->
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/gainsboro_gray</item>
         <!--        Menu Text Color-->
         <item name="android:textColorSecondary">@android:color/black</item>
         <!--        Menu Text Style-->
@@ -32,18 +30,16 @@
         <!--        Snack Bar Text Style-->
         <item name="snackbarTextViewStyle">@style/mySnackBarText</item>
         <!--        Snack Bar Action Style-->
-        <item name="snackbarButtonStyle">@style/mySnackBarButton</item>
+        <item name="snackbarButtonStyle">@style/mySnackBarAction</item>
         <!--        Snack Bar Style-->
         <item name="snackbarStyle">@style/mySnackBar</item>
         <!--        Child Category Text color-->
         <!--        <item name="childCategoryText">@color/childCategory_text_color</item>-->
-        <item name="childCategoryBackground">@color/childCategory_background</item>
-        <item name="childCategoryDragBackground">@color/childCategory_drag_background</item>
-        <item name="fabColor">@color/fabColor</item>
-        <item name="fabChildTintColor">@color/fabChild_tint_color</item>
-        <item name="fabChildBackgroundColor">@color/fabChild_background_color</item>
-        <item name="fabTint">@color/fab_tint</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="fontFamily">@font/sc_dream</item>
+        <item name="recyclerBackground">@color/recycler_background</item>
     </style>
+    )
     <!--    Tool Bar Title Style-->
     <!--    In Activity_main.xml-->
     <style name="myToolbarTitleStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
@@ -79,12 +75,12 @@
     </style>
     <!--    Snack Bar Text Style-->
     <style name="mySnackBarText" parent="Widget.MaterialComponents.Snackbar.TextView">
-        <item name="android:textSize">@dimen/_9sdp</item>
+        <item name="android:textSize">@dimen/_8sdp</item>
         <item name="android:textColor">@color/white</item>
     </style>
     <!--    Snack Bar Action Style-->
-    <style name="mySnackBarButton" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textSize">@dimen/_9sdp</item>
+    <style name="mySnackBarAction" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textSize">@dimen/_8sdp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#FF00CCCC</item>
     </style>
@@ -95,10 +91,5 @@
         <item name="actionTextColorAlpha">1</item>
     </style>
 
-    <attr name="childCategoryBackground" format="color" />
-    <attr name="childCategoryDragBackground" format="color" />
-    <attr name="fabColor" format="color" />
-    <attr name="fabTint" format="color" />
-    <attr name="fabChildTintColor" format="color" />
-    <attr name="fabChildBackgroundColor" format="color" />
+    <attr name="recyclerBackground" format="color" />
 </resources>
